# interview-merge

./: .gitignore  README.md  captions.srt  interview-merge.cabal  stack.yaml  transcript_ex.otr
app/: Main.hs
src/Data/: Interview.hs  OTranscribe.hs
test/Data/: InterviewSpec.hs  OTranscribeSpec.hs
