name:                interview-merge
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/corajr/interview-merge#readme
license:             BSD3
license-file:        LICENSE
author:              Cora Johnson-Roberson
maintainer:          me@corajr.com
copyright:           2016 Cora Johnson-Roberson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Interview
                     , Data.OTranscribe
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , pandoc
                     , pandoc-types
                     , data-default
                     , aeson
                     , bytestring
                     , subtitleParser
  default-language:    Haskell2010

executable interview-merge
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , interview-merge
  default-language:    Haskell2010

test-suite interview-merge-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , interview-merge
                     , attoparsec
                     , here
                     , subtitleParser
                     , aeson
                     , pandoc-types
                     , pandoc
                     , text
                     , bytestring
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/corajr/interview-merge
